5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1573_1332.log
== TEST (2019-03-11 15:29:30) 
-- CODE:
aresta =5
area =3/2(3)**0.5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(3)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:29:31) 
-- CODE:
aresta =5
area =3/2(3)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.154872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area =3/2(3)**0.5
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:04) 
-- CODE:
aresta =5
area =3/2*(3)**0.5
 
print(round(area, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:30:05) 
-- CODE:
aresta =5
area =3/2*(3)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.153236
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:26) 
-- CODE:
aresta =5
area =3/2*(3*5)**0.5
 
print(round(area, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:27) 
-- CODE:
aresta =5
area =3/2*(3*5)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.195025
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:53) 
-- CODE:
aresta =5
area =3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:54) 
-- CODE:
aresta =5
area =3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.237195
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:43) 
-- CODE:
aresta =5
area =3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.138796
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:45) 
-- CODE:
aresta =5
area =3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:04) 
-- CODE:
aresta =5
area =3/2*(3*5**2)**0.5
 
print(round(3/2*(3*5**2)**0.5, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:05) 
-- CODE:
aresta =5
area =3/2*(3*5**2)**0.5
 
print(round(3/2*(3*5**2)**0.5, 4))
-- EXECUTION TIME:
0.134766
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:21) 
-- CODE:
aresta =5
area =3/2*(3*5**2)**0.5
 
print(round(3/2*(3*5**2)**0.5, 4))))
-- ERROR:
File "XXXX", line 4
    print(round(3/2*(3*5**2)**0.5, 4))))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:22) 
-- CODE:
aresta =5
area =3/2*(3*5**2)**0.5
 
print(round(3/2*(3*5**2)**0.5, 4))))
-- EXECUTION TIME:
0.210696
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 4
    print(round(3/2*(3*5**2)**0.5, 4))))
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:27) 
-- CODE:
aresta =5
area =(3*5**2)**0.5*3/2

print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:28) 
-- CODE:
aresta =5
area =(3*5**2)**0.5*3/2

print(round(area, 4))
-- EXECUTION TIME:
0.140377
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:29) 
-- CODE:
aresta =5
area =(3*5**2)**0.5*3/2

print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:49) 
-- CODE:
aresta =5
area =(3*5**2)*3/2

print(round(area, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:50) 
-- CODE:
aresta =5
area =(3*5**2)*3/2

print(round(area, 4))
-- EXECUTION TIME:
0.196228
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:52) 
-- CODE:
aresta =5
area =(3*5**2)*3/2

print(round(area, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:52) 
-- CODE:
aresta =5
area =(3*5**2)*3/2

print(round(area, 4))
-- EXECUTION TIME:
0.11633
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:04) 
-- CODE:
aresta =5
area =(3*5**2)*3/2

print(round(112.5, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:05) 
-- CODE:
aresta =5
area =(3*5**2)*3/2

print(round(112.5, 4))
-- EXECUTION TIME:
0.109881
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:12) 
-- CODE:
aresta =5
area =((3*(aresta**2))**0.5)*3/2

print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:13) 
-- CODE:
aresta =5
area =((3*(aresta**2))**0.5)*3/2

print(round(area, 4))
-- EXECUTION TIME:
0.144399
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:21) 
-- CODE:
aresta =5
area =(((3*(aresta**2))**0.5)*3/2)

print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:22) 
-- CODE:
aresta =5
area =(((3*(aresta**2))**0.5)*3/2)

print(round(area, 4))
-- EXECUTION TIME:
0.160791
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:21) 
-- CODE:
aresta =5
area =((aresta**2)*(3)**0.5)*3/2

print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:23) 
-- CODE:
aresta =5
area =((aresta**2)*(3)**0.5)*3/2

print(round(area, 4))
-- EXECUTION TIME:
0.168764
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
